cmake_minimum_required(VERSION 3.25)


add_executable(
    modular_testing 
        ${CMAKE_SOURCE_DIR}/tests/main.cpp
        EmulatorCore/Decoding/CMPInstr/R_R.cpp
        EmulatorCore/Decoding/CMPInstr/RM_IMM.cpp
        EmulatorCore/Decoding/CMPInstr/RM_M.cpp
        EmulatorCore/Decoding/CMPInstr/M_R.cpp
        EmulatorCore/Decoding/CMPInstr/RM_R.cpp
        EmulatorCore/Decoding/CMPInstr/Unsupported.cpp
        EmulatorCore/Decoding/CMPInstr/R_RM.cpp
        EmulatorCore/Decoding/CMPInstr/R_IMM.cpp
        EmulatorCore/Decoding/CMPInstr/R_M.cpp
        EmulatorCore/Decoding/SHFLInstr/R_R.cpp
        EmulatorCore/Decoding/SHFLInstr/Unsupported.cpp
        EmulatorCore/Decoding/SHFLInstr/R_IMM.cpp
        EmulatorCore/Decoding/SHFRInstr/R_R.cpp
        EmulatorCore/Decoding/SHFRInstr/Unsupported.cpp
        EmulatorCore/Decoding/SHFRInstr/R_IMM.cpp
        EmulatorCore/Decoding/JMLInstr/test_decoder_r.cpp
        EmulatorCore/Decoding/JMLInstr/test_decoder_imm.cpp
        EmulatorCore/Decoding/JMLInstr/test_decoder_unsupported.cpp
        EmulatorCore/Decoding/BSWAPInstr/R.cpp
        EmulatorCore/Decoding/BSWAPInstr/Unsupported.cpp
        EmulatorCore/Decoding/CALLGRInstr/test_decoder_r.cpp
        EmulatorCore/Decoding/CALLGRInstr/test_decoder_imm.cpp
        EmulatorCore/Decoding/CALLGRInstr/test_decoder_unsupported.cpp
        EmulatorCore/Decoding/MULInstr/R_R.cpp
        EmulatorCore/Decoding/MULInstr/Unsupported.cpp
        EmulatorCore/Decoding/MULInstr/R_RM.cpp
        EmulatorCore/Decoding/MULInstr/R_IMM.cpp
        EmulatorCore/Decoding/MULInstr/R_M.cpp
        EmulatorCore/Decoding/WRITEInstr/R_R.cpp
        EmulatorCore/Decoding/WRITEInstr/Unsupported.cpp
        EmulatorCore/Decoding/WRITEInstr/R_IMM.cpp
        EmulatorCore/Decoding/DECInstr/R.cpp
        EmulatorCore/Decoding/DECInstr/Unsupported.cpp
        EmulatorCore/Decoding/CUDFInstr/Unsupported.cpp
        EmulatorCore/Decoding/CUDFInstr/None.cpp
        EmulatorCore/Decoding/CALLEInstr/test_decoder_r.cpp
        EmulatorCore/Decoding/CALLEInstr/test_decoder_imm.cpp
        EmulatorCore/Decoding/CALLEInstr/test_decoder_unsupported.cpp
        EmulatorCore/Decoding/INCInstr/R.cpp
        EmulatorCore/Decoding/INCInstr/Unsupported.cpp
        EmulatorCore/Decoding/COVFInstr/test_decoder_unsupported.cpp
        EmulatorCore/Decoding/COVFInstr/test_decoder_none.cpp
        EmulatorCore/Decoding/JMGRInstr/test_decoder_r.cpp
        EmulatorCore/Decoding/JMGRInstr/test_decoder_imm.cpp
        EmulatorCore/Decoding/JMGRInstr/test_decoder_unsupported.cpp
        EmulatorCore/Decoding/JMPInstr/test_decoder_r.cpp
        EmulatorCore/Decoding/JMPInstr/test_decoder_imm.cpp
        EmulatorCore/Decoding/JMPInstr/test_decoder_unsupported.cpp
        EmulatorCore/Decoding/SUBInstr/R_R.cpp
        EmulatorCore/Decoding/SUBInstr/Unsupported.cpp
        EmulatorCore/Decoding/SUBInstr/R_RM.cpp
        EmulatorCore/Decoding/SUBInstr/R_IMM.cpp
        EmulatorCore/Decoding/SUBInstr/R_M.cpp
        EmulatorCore/Decoding/ANDInstr/R_R.cpp
        EmulatorCore/Decoding/ANDInstr/Unsupported.cpp
        EmulatorCore/Decoding/ANDInstr/R_RM.cpp
        EmulatorCore/Decoding/ANDInstr/R_IMM.cpp
        EmulatorCore/Decoding/ANDInstr/R_M.cpp
        EmulatorCore/Decoding/MOVInstr/R_R.cpp
        EmulatorCore/Decoding/MOVInstr/RM_IMM.cpp
        EmulatorCore/Decoding/MOVInstr/RM_M.cpp
        EmulatorCore/Decoding/MOVInstr/M_R.cpp
        EmulatorCore/Decoding/MOVInstr/RM_R.cpp
        EmulatorCore/Decoding/MOVInstr/Unsupported.cpp
        EmulatorCore/Decoding/MOVInstr/R_RM.cpp
        EmulatorCore/Decoding/MOVInstr/R_IMM.cpp
        EmulatorCore/Decoding/MOVInstr/R_M.cpp
        EmulatorCore/Decoding/ADDInstr/R_R.cpp
        EmulatorCore/Decoding/ADDInstr/Unsupported.cpp
        EmulatorCore/Decoding/ADDInstr/R_RM.cpp
        EmulatorCore/Decoding/ADDInstr/R_IMM.cpp
        EmulatorCore/Decoding/ADDInstr/R_M.cpp
        EmulatorCore/Decoding/HIDInstr/Unsupported.cpp
        EmulatorCore/Decoding/HIDInstr/None.cpp
        EmulatorCore/Decoding/JMEInstr/test_decoder_r.cpp
        EmulatorCore/Decoding/JMEInstr/test_decoder_imm.cpp
        EmulatorCore/Decoding/JMEInstr/test_decoder_unsupported.cpp
        EmulatorCore/Decoding/ANDNInstr/R_R.cpp
        EmulatorCore/Decoding/ANDNInstr/Unsupported.cpp
        EmulatorCore/Decoding/ANDNInstr/R_RM.cpp
        EmulatorCore/Decoding/ANDNInstr/R_IMM.cpp
        EmulatorCore/Decoding/ANDNInstr/R_M.cpp
        EmulatorCore/Decoding/DIVInstr/R.cpp
        EmulatorCore/Decoding/DIVInstr/Unsupported.cpp
        EmulatorCore/Decoding/CALLLInstr/test_decoder_r.cpp
        EmulatorCore/Decoding/CALLLInstr/test_decoder_imm.cpp
        EmulatorCore/Decoding/CALLLInstr/test_decoder_unsupported.cpp
        EmulatorCore/Decoding/CALLInstr/test_decoder_r.cpp
        EmulatorCore/Decoding/CALLInstr/test_decoder_imm.cpp
        EmulatorCore/Decoding/CALLInstr/test_decoder_unsupported.cpp
        EmulatorCore/Decoding/ADCInstr/R_R.cpp
        EmulatorCore/Decoding/ADCInstr/Unsupported.cpp
        EmulatorCore/Decoding/ADCInstr/R_RM.cpp
        EmulatorCore/Decoding/ADCInstr/R_IMM.cpp
        EmulatorCore/Decoding/ADCInstr/R_M.cpp
        EmulatorCore/Decoding/Features/AddressAddition.cpp
        EmulatorCore/Decoding/HALTInstr/Unsupported.cpp
        EmulatorCore/Decoding/HALTInstr/None.cpp
        EmulatorCore/Decoding/ORInstr/R_R.cpp
        EmulatorCore/Decoding/ORInstr/Unsupported.cpp
        EmulatorCore/Decoding/ORInstr/R_RM.cpp
        EmulatorCore/Decoding/ORInstr/R_IMM.cpp
        EmulatorCore/Decoding/ORInstr/R_M.cpp
        EmulatorCore/Decoding/READInstr/IMM.cpp
        EmulatorCore/Decoding/READInstr/Unsupported.cpp
        EmulatorCore/Decoding/CCRFInstr/test_decoder_unsupported.cpp
        EmulatorCore/Decoding/CCRFInstr/test_decoder_none.cpp
        EmulatorCore/MemoryControllers/ST.cpp
        EmulatorCore/CPUInit/CPUInit.cpp
        EmulatorCore/Stack/Stack.cpp
        AssemblerCore/Parser/Statements.cpp
        AssemblerCore/Parser/Operands.cpp
        AssemblerCore/Parser/Tokens.cpp
)
target_link_libraries(
    modular_testing
    PRIVATE
        emulator-core
        assembler-core
        GTest::gtest
        pthread
        pch
)
target_include_directories(
    modular_testing
    PRIVATE
        ${CMAKE_SOURCE_DIR}/tests
)

gtest_add_tests(
    TARGET 
        modular_testing
    EXTRA_ARGS
        --gtest_brief=1
)
