load('@rules_cc//cc:defs.bzl', 'cc_test')

cc_test(
    name = 'test-pog',
    srcs = glob(['**/*.cpp']),
    deps = [
        '//tests:pch_gtest',
        '//tests:test_fixtures',
        '//src/PCH:pch_cstd',
        '//src/Pog:pog',
        '@gtest//:gtest-gmock_main',
        '@re2//:re2',
        '@fmt//:fmt'
    ]
)
